--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>My Name is iku55!</title>
+    <title>Hi,My Name is iku55!</title>
   </head>
   <body>
     <a href='https://github.com/iku55'>Github</a>
